--- a/web/NikeDunkLow.html
+++ b/web/NikeDunkLow.html
@@ -18,3 +18,28 @@
     </div>
   </header>
 </head>
+
+<body>
+  <div class="main">
+    <div class="card">
+      <img src="nikebig.png" alt="Nike Dunk Low Orange" class="image">
+      <h2>Nike Dunk Low SP</h2>
+      <h3>Nike Dunk Low Orange Blaze Syracuse</h3>
+    </div>
+  </div>
+</body>
+
+<footer class="footer">
+  <div class="footer-content">
+    <img class="logo-footer" src="logo_footer.png" alt="logo">
+    <div class="footer-links">
+      <a href="https://t.me/breakingmash"><img class="tgf" alt="Telegram link" src="tgw.png"></a>
+      <a href="https://vk.com/id275613746"><img class="vkf" alt="VK link" src="vkw.png"></a>
+      <a href="https://www.youtube.com/@yandex"><img class="ytf" alt="YouTube link" src="ytw.png"></a>
+    </div>
+  </div>
+  <hr>
+  <p class="footer-text">КРОССЫ И ТОЧКА ® 2023</p>
+</footer>
+
+</html>
