--- a/web/NikeDunkLow.html
+++ b/web/NikeDunkLow.html
@@ -25,6 +25,26 @@
       <img src="nikebig.png" alt="Nike Dunk Low Orange" class="image">
       <h2>Nike Dunk Low SP</h2>
       <h3>Nike Dunk Low Orange Blaze Syracuse</h3>
+      <div class="card__info">
+        <div class="info__left">
+          <p class="text" style="margin: 0px;">Nike — американская транснациональная компания, специализирующаяся на спортивной одежде и обуви.
+            Штаб-квартира — в городе Бивертон (штат Орегон).</p>
+          <p class="text" style="margin: 48px 0px;">Почти вся продукция Nike производится сторонними компаниями-подрядчиками вне территории США (в основном в
+            Азии), сама компания является правообладателем торговых марок, разрабатывает дизайн продукции и владеет
+            сетью магазинов (около 1150 по всему миру), а также торговых центров NikeTown. С 20 сентября 2013 года
+            входит в Промышленный индекс Доу Джонса. Nike является самым дорогим спортивным брендом в мире (по мнению
+            Forbes).</p>
+          <p class="text" style="margin: 0px;">Компания, основанная 25 января 1964 года под названием Blue Ribbon Sports, официально стала Nike, Inc. в
+            1978 году. Nike продаёт свою продукцию под собственным брендом, а также под марками Nike Golf, Nike Pro,
+            Nike +, Air Jordan, Nike Blazers, Air Force 1, Nike Dunk, Air Max, Foamposite, Nike Skateboarding, Nike CR7,
+            Hurley International, Converse. Nike является спонсором многих спортсменов и спортивных команд по всему
+            миру.</p>
+        </div>
+        <div class="info__right">
+          as;ojdn;aoisjd;iojasouhd;oaijs;'pidja'psk'dpkja'
+        </div>
+
+      </div>
     </div>
   </div>
 </body>
