Готовый без моблы

--- a/web/NikeDunkLow.html
+++ b/web/NikeDunkLow.html
@@ -6,10 +6,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nike Dunk Low SP</title>
-  <link rel="stylesheet" href="NikeDunk.css" />
+  <link rel="stylesheet" href="big_shoes.css" />
   <header>
     <div class="header-content">
-      <a href="file:///C:/Users/kabys/Desktop/web/krosi.html"><img class=logo alt="logo" src="logo.svg"></a>
+      <a href="file:///C:/Users/kabys/Desktop/web/index.html"><img class=logo alt="logo" src="logo.svg"></a>
       <nav class="header-links">
         <a href="https://t.me/breakingmash"><img class="tghd" alt="Telegram link" src="tg.png"></a>
         <a href="https://vk.com/id275613746"><img class="vkhd" alt="VK link" src="vk.png"></a>
@@ -27,21 +27,43 @@
       <h3>Nike Dunk Low Orange Blaze Syracuse</h3>
       <div class="card__info">
         <div class="info__left">
-          <p class="text" style="margin: 0px;">Nike — американская транснациональная компания, специализирующаяся на спортивной одежде и обуви.
+          <p class="text" style="margin: 0px;">Nike — американская транснациональная компания, специализирующаяся на
+            спортивной одежде и обуви.
             Штаб-квартира — в городе Бивертон (штат Орегон).</p>
-          <p class="text" style="margin: 48px 0px;">Почти вся продукция Nike производится сторонними компаниями-подрядчиками вне территории США (в основном в
+          <p class="text" style="margin: 48px 0px;">Почти вся продукция Nike производится сторонними
+            компаниями-подрядчиками вне территории США (в основном в
             Азии), сама компания является правообладателем торговых марок, разрабатывает дизайн продукции и владеет
             сетью магазинов (около 1150 по всему миру), а также торговых центров NikeTown. С 20 сентября 2013 года
             входит в Промышленный индекс Доу Джонса. Nike является самым дорогим спортивным брендом в мире (по мнению
             Forbes).</p>
-          <p class="text" style="margin: 0px;">Компания, основанная 25 января 1964 года под названием Blue Ribbon Sports, официально стала Nike, Inc. в
+          <p class="text" style="margin: 0px;">Компания, основанная 25 января 1964 года под названием Blue Ribbon
+            Sports, официально стала Nike, Inc. в
             1978 году. Nike продаёт свою продукцию под собственным брендом, а также под марками Nike Golf, Nike Pro,
             Nike +, Air Jordan, Nike Blazers, Air Force 1, Nike Dunk, Air Max, Foamposite, Nike Skateboarding, Nike CR7,
             Hurley International, Converse. Nike является спонсором многих спортсменов и спортивных команд по всему
             миру.</p>
         </div>
         <div class="info__right">
-          as;ojdn;aoisjd;iojasouhd;oaijs;'pidja'psk'dpkja'
+          <div>
+            <h4>О кроссах</h4>
+            <hr class="hr__info">
+          </div>
+          <div class="info">
+            <p class="text__info">Дата выхода</p>
+            <p class="text__info">10/03/2020</p>
+          </div>
+          <hr class="hr__info">
+          <div class="info">
+            <p class="text__info">Розничная цена</p>
+            <p class="text__info">251€</p>
+          </div>
+          <hr class="hr__info">
+          <div class="info">
+            <p class="text__info">Материалы</p>
+            <p class="text__info">Кожа 100%, резина</p>
+          </div>
+          <hr class="hr__info">
+
         </div>
 
       </div>
