--- a/web/index.html
+++ b/web/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="kros1.css" />
   <header>
     <div class="header-content">
-      <a href="file:///C:/Users/kabys/Desktop/web/krosi.html"><img class=logo alt="logo" src="logo.svg"></a>
+      <a href="file:///C:/Users/kabys/Desktop/web/index.html"><img class=logo alt="logo" src="logo.svg"></a>
       <nav class="header-links">
         <a href="https://t.me/breakingmash"><img class="tghd" alt="Telegram link" src="tg.png"></a>
         <a href="https://vk.com/id275613746"><img class="vkhd" alt="VK link" src="vk.png"></a>
@@ -23,6 +23,7 @@
   <h2 class="subtitle">Коллекция. {октябрь:2023} </h2>
   <main class="main">
     <div style="display: flex; margin-bottom: 24px;">
+      <a href="NewBalance574.html">
       <div class="container">
         <img alt="New Balance 574 YURT" src="1.png" style="object-fit: contain;">
         <div class="text">
@@ -30,6 +31,7 @@
           <p class="container__text">Salehe Bembury Shark Skin</p>
         </div>
       </div>
+    </a>
       <a href="NikeDunkLow.html">
         <div class="container" style="margin: 0px 24px;">
           <img alt="Nike Dunk Low SP" src="2.png" style="object-fit: contain;">
@@ -39,6 +41,7 @@
           </div>
         </div>
       </a>
+      <a href="Converse Chuck 70 High.html">
       <div class="container">
         <img alt="Converse Chuck 70 High" src="3.png" style="object-fit: contain;">
         <div class="text">
@@ -46,6 +49,7 @@
           <p class="container__text">Comme des Garcons PLAY Black</p>
         </div>
       </div>
+    </a>
     </div>
     <div style="display: flex; margin-bottom: 24px;">
       <div class="container">
