Без моблы глав страницы

--- a/web/NewBalance574.html
+++ b/web/NewBalance574.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="big_shoes.css" />
     <header>
         <div class="header-content">
-            <a href="file:///C:/Users/kabys/Desktop/web/index.html"><img class=logo alt="logo" src="logo.svg"></a>
+            <a href="file:///C:/Users/kabys/Desktop/web/index.html" class="logo__link"><img class=logo alt="logo"
+                    src="logo.svg"></a>
             <nav class="header-links">
                 <a href="https://t.me/breakingmash"><img class="tghd" alt="Telegram link" src="tg.png"></a>
                 <a href="https://vk.com/id275613746"><img class="vkhd" alt="VK link" src="vk.png"></a>
@@ -63,9 +64,7 @@
                         <p class="text__info">Замша 100%, резина</p>
                     </div>
                     <hr class="hr__info">
-
                 </div>
-
             </div>
         </div>
     </div>
