--- a/web/NikeDunkLow.html
+++ b/web/NikeDunkLow.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="big_shoes.css" />
   <header>
     <div class="header-content">
-      <a href="file:///C:/Users/kabys/Desktop/web/index.html"><img class=logo alt="logo" src="logo.svg"></a>
+      <a href="file:///C:/Users/kabys/Desktop/web/index.html"><img class="logo" alt="logo" src="logo.svg"></a>
       <nav class="header-links">
         <a href="https://t.me/breakingmash"><img class="tghd" alt="Telegram link" src="tg.png"></a>
         <a href="https://vk.com/id275613746"><img class="vkhd" alt="VK link" src="vk.png"></a>
